# telekinesis

./: .gitignore  .gitmodules  AGENTS.md  README.md  RESEARCH.md  build.zig  build.zig.zon  crepus.toml
.github/workflows/: ci.yml
db/: Cargo.toml
db/src/: main.rs  schema.sql
docs/: ARCHITECTURE.md  ARCHITECTURE.zh.md  README.md  ROTARY.md
plugins/: example.ts  shim.ts
src/: acp.zig  agent.zig  config.zig  db.zig  ipc.zig  lsp.zig  main.zig  net.zig  plugin.zig  provider.zig  root.zig  session.zig  tools.zig
ui/: app.crepus  shell.crepus
ui/gui/: Cargo.toml  companion.crepus  cursor_panel.crepus  desktop.crepus
ui/gui/src/: agent.rs  main.rs  product_policy.rs  shake.rs  tray.rs
ui/gui/src/platform/: macos.rs
ui/gui/src/view/: companion.rs  mod.rs  overlay.rs  session.rs
ui/tui/: Cargo.toml
ui/tui/src/: channel_approver.rs  main.rs  mcp_config.rs  product_policy.rs
ui/tui/src/pi/: conformance.rs  mod.rs  rpc.rs  sdk.rs  session.rs  session_store_v2.rs
ui/web/: Cargo.toml
ui/web/src/: main.rs
zig-pkg/httpx-0.1.2-8qj2erENDgA9jcFYrZcP-IhxGfMguR_ynyeAS1cdjBCw/: README.md  build.zig  build.zig.zon
zig-pkg/httpx-0.1.2-8qj2erENDgA9jcFYrZcP-IhxGfMguR_ynyeAS1cdjBCw/bench/: main.zig
zig-pkg/httpx-0.1.2-8qj2erENDgA9jcFYrZcP-IhxGfMguR_ynyeAS1cdjBCw/examples/: async_server_example.zig  concurrent_requests.zig  connection_pool.zig  cookies_demo.zig  custom_headers.zig  health_check_example.zig  http2_client_runtime.zig  http2_example.zig  http2_server_runtime.zig  http3_client_runtime.zig  http3_example.zig  http3_server_runtime.zig  http_auth_helpers.zig  interceptors.zig  metrics_example.zig  middleware_example.zig  multi_page_website.zig  multipart_example.zig  post_json.zig  proxy_example.zig  request_response_customization.zig  router_example.zig  session_example.zig  simple_get.zig  simple_get_deserialize.zig  simple_server.zig  simplified_api_aliases.zig  static_files.zig  streaming.zig  tcp_local.zig  udp_local.zig  unix_socket_example.zig  websocket_example.zig
zig-pkg/httpx-0.1.2-8qj2erENDgA9jcFYrZcP-IhxGfMguR_ynyeAS1cdjBCw/examples/multi_page_site/site/: about.html  contact.html  index.html
zig-pkg/httpx-0.1.2-8qj2erENDgA9jcFYrZcP-IhxGfMguR_ynyeAS1cdjBCw/examples/multi_page_site/site/assets/: app.js  styles.css
zig-pkg/httpx-0.1.2-8qj2erENDgA9jcFYrZcP-IhxGfMguR_ynyeAS1cdjBCw/src/: httpx.zig
zig-pkg/httpx-0.1.2-8qj2erENDgA9jcFYrZcP-IhxGfMguR_ynyeAS1cdjBCw/src/client/: client.zig  pool.zig  proxy.zig
zig-pkg/httpx-0.1.2-8qj2erENDgA9jcFYrZcP-IhxGfMguR_ynyeAS1cdjBCw/src/concurrency/: executor.zig  pool.zig
zig-pkg/httpx-0.1.2-8qj2erENDgA9jcFYrZcP-IhxGfMguR_ynyeAS1cdjBCw/src/core/: headers.zig  meta.zig  request.zig  response.zig  types.zig  uri.zig
zig-pkg/httpx-0.1.2-8qj2erENDgA9jcFYrZcP-IhxGfMguR_ynyeAS1cdjBCw/src/net/: address.zig  compat.zig  socket.zig  unix.zig
zig-pkg/httpx-0.1.2-8qj2erENDgA9jcFYrZcP-IhxGfMguR_ynyeAS1cdjBCw/src/protocol/: hpack.zig  http.zig  parser.zig  qpack.zig  quic.zig  stream.zig  websocket.zig
zig-pkg/httpx-0.1.2-8qj2erENDgA9jcFYrZcP-IhxGfMguR_ynyeAS1cdjBCw/src/server/: middleware.zig  router.zig  server.zig
zig-pkg/httpx-0.1.2-8qj2erENDgA9jcFYrZcP-IhxGfMguR_ynyeAS1cdjBCw/src/tls/: tls.zig
zig-pkg/httpx-0.1.2-8qj2erENDgA9jcFYrZcP-IhxGfMguR_ynyeAS1cdjBCw/src/util/: any_io.zig  buffer.zig  common.zig  encoding.zig  json.zig  list_writer.zig  metrics.zig  mime.zig  multipart.zig  session.zig
zig-pkg/zig_varint-0.1.0-JouQHUVXAAAGN-XdMYrVEmYrzJd6zXtI7zk9bPnKYXVK/: README.md  build.zig  build.zig.zon
zig-pkg/zig_varint-0.1.0-JouQHUVXAAAGN-XdMYrVEmYrzJd6zXtI7zk9bPnKYXVK/src/: quic.zig  root.zig  unsigned.zig
zig-pkg/zquic-1.7.86-2zRc1I2dGQAI1M0gg19eycqe5WRZwvwJx97CECAhYreO/src/crypto/: key_update.zig  keys.zig
zig-pkg/zquic-1.7.86-2zRc1I2dGQAI1M0gg19eycqe5WRZwvwJx97CECAhYreO/src/frames/: crypto_frame.zig  stream.zig
zig-pkg/zquic-1.7.86-2zRc1I2dGQAI1M0gg19eycqe5WRZwvwJx97CECAhYreO/src/http09/: client.zig  server.zig
zig-pkg/zquic-1.7.86-2zRc1I2dGQAI1M0gg19eycqe5WRZwvwJx97CECAhYreO/src/http3/: frame.zig  qpack.zig
zig-pkg/zquic-1.7.86-2zRc1I2dGQAI1M0gg19eycqe5WRZwvwJx97CECAhYreO/src/packet/: header.zig  number.zig  retry.zig  version_negotiation.zig
zig-pkg/zquic-1.7.86-2zRc1I2dGQAI1M0gg19eycqe5WRZwvwJx97CECAhYreO/src/transport/: flow_control.zig
