[package]
name = "telekinesis-gui"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
description = "Telekinesis companion — floating GPUI overlay for general computer use, powered by rx4"
repository = "https://github.com/semitechnological/telekinesis"
keywords = ["ai", "agent", "gui", "computer-use", "overlay", "rx4"]
categories = ["gui", "development-tools"]

[[bin]]
name = "telekinesis-companion"
path = "src/main.rs"

[features]
default = ["macos"]
macos = ["crepuscularity-gpui/macos"]
x11 = ["crepuscularity-gpui/x11"]
wayland = ["crepuscularity-gpui/wayland"]
windows = ["crepuscularity-gpui/windows"]

[dependencies]
crepuscularity-gpui = { path = "../../../crepuscularity/crates/crepuscularity-gpui", default-features = false, features = ["font-kit", "symbols"] }
crepuscularity_macros = { path = "../../../crepuscularity/crates/crepuscularity_macros" }
crepuscularity-runtime = { path = "../../../crepuscularity/crates/crepuscularity-runtime" }
gpui = "=0.2.2"
rx4 = { version = "0.3.8", features = ["providers", "builtin-tools", "computer-use", "skills", "graph-memory"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
rs_ai_oauth = "0.2"
tracing = "0.1"
parking_lot = "0.12"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tray-icon = "0.24"
global-hotkey = "0.8"
