[package]
name = "telekinesis-gui"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
description = "Telekinesis companion — floating GPUI overlay for general computer use, powered by rx4"
repository = "https://github.com/semitechnological/telekinesis"
keywords = ["ai", "agent", "gui", "computer-use", "overlay", "rx4"]
categories = ["gui", "development-tools"]

[[bin]]
name = "telekinesis-companion"
path = "src/main.rs"

[features]
default = ["macos"]
macos = ["crepuscularity-gpui/macos"]
x11 = ["crepuscularity-gpui/x11"]
wayland = ["crepuscularity-gpui/wayland"]
windows = ["crepuscularity-gpui/windows"]

[dependencies]
crepuscularity-gpui = { path = "../../../crepuscularity/crates/crepuscularity-gpui", default-features = false, features = ["font-kit", "symbols"] }
crepuscularity_macros = { path = "../../../crepuscularity/crates/crepuscularity_macros" }
gpui = "=0.2.2"
rx4 = { version = "0.3.13", features = ["providers", "builtin-tools", "computer-use", "skills", "graph-memory"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tray-icon = "0.24"
global-hotkey = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSView",
    "NSWindow",
] }
objc2-core-foundation = "0.3"
objc2-foundation = { version = "0.3", features = ["NSString"] }
raw-window-handle = "0.6"
