[package]
name = "telekinesis"
version = "0.1.4"
edition = "2021"
license = "MPL-2.0"
description = "CLI + TUI host for the rotary (rx4) agent harness engine — pi-first, codex-second UX with crepuscularity-tui"
repository = "https://github.com/semitechnological/telekinesis"
homepage = "https://github.com/semitechnological/telekinesis"
keywords = ["ai", "agent", "cli", "tui", "rotary"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tk"
path = "src/main.rs"

[dependencies]
crepuscularity-tui = "0.4"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rs_ai_oauth = "0.2"
