[package]
name = "telekinesis"
version = "0.2.2"
edition = "2021"
license = "MPL-2.0"
description = "AI coding agent TUI — rx4 harness + crepuscularity-tui, pi-first UX"
repository = "https://github.com/semitechnological/telekinesis"
homepage = "https://github.com/semitechnological/telekinesis"
keywords = ["ai", "agent", "cli", "tui", "coding"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tk"
path = "src/main.rs"

[dependencies]
crepuscularity-tui = "0.4.22"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rs_ai_oauth = "0.2"
rx4 = { version = "0.3", features = ["providers", "builtin-tools"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
async-trait = "0.1"
