[package]
name = "telekinesis"
version = "0.2.10"
edition = "2021"
license = "MPL-2.0"
description = "AI coding agent TUI — rx4 harness + crepuscularity-tui, pi-first UX"
repository = "https://github.com/semitechnological/telekinesis"
homepage = "https://github.com/semitechnological/telekinesis"
keywords = ["ai", "agent", "cli", "tui", "coding"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tk"
path = "src/main.rs"

[features]
default = ["pi-compat"]
# Pi protocol compatibility — JSONL v3 sessions, RPC over stdin/stdout,
# pi tool names, extension protocol with capability policy, SDK surface.
pi-compat = ["dep:serde_yaml"]
# QuickJS runtime execution of pi extensions.
pi-extensions = ["pi-compat", "dep:rquickjs", "dep:regex"]

[dependencies]
crepuscularity-tui = "0.4.22"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rs_ai_oauth = "0.2"
rx4 = { version = "0.3.21", path = "../../../rotary", features = ["providers", "builtin-tools", "computer-use", "skills", "graph-memory", "mcp", "ipc"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
async-trait = "0.1"
tracing = "0.1"
parking_lot = "0.12"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

# Optional — pi-compat
serde_yaml = { version = "0.9", optional = true }

# Optional — pi-extensions (QuickJS runtime for pi extension execution)
rquickjs = { version = "0.7", features = ["loader", "allocator", "parallel"], optional = true }
regex = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
