[package]
name = "telekinesis-web"
version = "0.1.0"
edition = "2021"

[dependencies]
crepuscularity-ssr = { path = "../../../crepuscularity/crates/crepuscularity-ssr" }
crepuscularity-core = { path = "../../../crepuscularity/crates/crepuscularity-core" }
crepuscularity-web = { path = "../../../crepuscularity/crates/crepuscularity-web" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
