[package]
name = "telekinesis-web"
version = "0.1.0"
edition = "2021"

[dependencies]
crepuscularity-ssr = "0.3.0"
crepuscularity-core = "0.4.20"
crepuscularity-web = "0.4.13"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
